@@ -70,7 +70,7 @@ NoTranslateMap = set(NoTranslateTypes)
 
 
 class MapEntry:
-    "Simple holder for named attibutes - items in a map."
+    """Simple holder for named attributes - items in a map."""
 
     def __init__(
         self,
@@ -99,7 +99,7 @@ class MapEntry:
 
     def __repr__(self):
         return (
-            "MapEntry(dispid={s.dispid}, desc={s.desc}, names={s.names}, doc={s.doc!r}, "
+            "{s.__class__.__name__}(dispid={s.dispid}, desc={s.desc}, names={s.names}, doc={s.doc!r}, "
             "resultCLSID={s.resultCLSID}, resultDocumentation={s.resultDocumentation}, "
             "wasProperty={s.wasProperty}, hidden={s.hidden}"
         ).format(s=self)
