@@ -565,6 +565,6 @@ class QueryError(Exception):
         self.query = query
 
     def __repr__(self):
-        return f"<Query Error in {self.query!r}>"
+        return f"<{self.__class__.__name__} in {self.query!r}>"
 
     __str__ = __repr__
